[package]
name = "commander"
version = "0.6.0"
edition = "2021"
authors = ["Artur Gwoździowski"]
description = "remote robot control process based on webrtc-rs v0.9"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
webrtc = "0.11.0"
tokio = { version = "1.37.0", features = ["full"] }
env_logger = "0.11.3"
hyper = { version = "1.3.1", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["codec"] }
anyhow = "1.0.82"
chrono = "0.4.38"
log = "0.4.21"
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
bytes = "1.6.0"
lazy_static = "1.4.0"
rand = "0.8.5"
firebase-rs = "2.1.1"
base64 = "0.22.1"
openssl-src = "300.2.3"
openssl = { version = "0.10.64", features = ["vendored"]}
rppal = "0.17.1"
clap = { version = "4.5.4", features = ["derive"] }

[build-dependencies]
embed-resource = "2.4.2"
